<?xml version="1.0"?>
<package format="2">
	<name>husky_goals_pkg</name>
	<version>0.0.0</version>
	<description>The husky_goals_pkg package</description>

	<!-- One maintainer tag required, multiple allowed, one person per tag -->
	<maintainer email="fhtw_user@todo.todo">fhtw_user</maintainer>

	<!-- One license tag required, multiple allowed, one license per tag -->
	<license>TODO</license>

	<!-- The *depend tags are used to specify dependencies -->
	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>actionlib</build_depend>
	<build_depend>move_base_msgs</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>cv_bridge</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>tf</build_depend>
	<build_export_depend>actionlib</build_export_depend>
	<build_export_depend>move_base_msgs</build_export_depend>
	<build_export_depend>roscpp</build_export_depend>
	<build_export_depend>sensor_msgs</build_export_depend>
	<build_export_depend>cv_bridge</build_export_depend>
	<build_export_depend>geometry_msgs</build_export_depend>
	<build_export_depend>tf</build_export_depend>
	<exec_depend>actionlib</exec_depend>
	<exec_depend>move_base_msgs</exec_depend>
	<exec_depend>roscpp</exec_depend>
	<exec_depend>sensor_msgs</exec_depend>
	<exec_depend>cv_bridge</exec_depend>
	<exec_depend>geometry_msgs</exec_depend>
	<exec_depend>tf</exec_depend>

	<!-- The export tag contains other, unspecified, tags -->
	<export>
		<!-- Other tools can request additional information be placed here -->
	</export>
</package>
